# embedded-systems

./: .clang-format  .gitignore  CMakeLists.txt  arm-gcc-toolchain.cmake
Micro/: results
Micro/hash/: HASH-FLASH.STANDARD.XML  HASH-MODULES.STANDARD.XML  HASH.AOF  HASH.HEX  HASH.M51  HASH.XRF  Hash-Globals.Standard.xdb  Hash.ctx  Hash.dbi  Hash.rapp  Hash.rprj  benchmark.lst  hash.lst
Micro/hash/files/: CMakeLists.txt  benchmark.c  hash.c  hash.h
Micro/laplacian/: LAPLACIAN-FLASH.STANDARD.XML  LAPLACIAN-MODULES.STANDARD.XML  LAPLACIAN.HEX  LAPLACIAN.M51  LAPLACIAN.XRF  Laplacian.ctx  Laplacian.dbi  Laplacian.rapp  Laplacian.rprj  benchmark.lst  laplacian.c  laplacian.lst
Micro/laplacian/files/: benchmark.c  laplacian.c
hash/: CMakeLists.txt  benchmark.c  benchmark.cpp  hash.c  hash.cpp  hash.h  hashs.txt
json/: CMakeLists.txt  big_array.json  json.c  json.h  main.c  program
laplacian/: 1024x1024_image.h  10x10_image.h  273x275_image.h  512x512_image.h  CMakeLists.txt  benchmark.c  laplacian.c  laplacian.h  program
results/Micro/: results.md
results/Micro/hash/: HASH-FLASH.STANDARD.XML  HASH-MODULES.STANDARD.XML  HASH.HEX  HASH.M51  HASH.XRF  Hash.ctx  Hash.dbi  Hash.rapp  Hash.rprj  Hash.xdb  benchmark.lst  hash.lst
results/Micro/json/: main.c
results/Micro/laplacian/: LAPLACIAN-FLASH.STANDARD.XML  LAPLACIAN-MODULES.STANDARD.XML  LAPLACIAN.AOF  LAPLACIAN.HEX  LAPLACIAN.M51  LAPLACIAN.XRF  Laplacian-Globals.Standard.xdb  Laplacian.ctx  Laplacian.dbi  Laplacian.rapp  Laplacian.rprj  (+3 more)
results/arm/: hash.txt  hash_comprida.txt  laplacian.txt
(+10 files in other folders)
